--- a/app/src/main/res/menu/menu_selfie_list.xml
+++ b/app/src/main/res/menu/menu_selfie_list.xml
@@ -1,6 +1,15 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools" tools:context=".SelfieListActivity">
-    <item android:id="@+id/action_settings" android:title="@string/action_settings"
-        android:orderInCategory="100" app:showAsAction="never" />
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:context=".SelfieListActivity">
+
+    <item android:id="@+id/action_settings"
+        android:title="@string/action_settings"
+        android:orderInCategory="100"
+        android:showAsAction="never" />
+
+    <item android:id="@+id/action_take_photo"
+        android:title="@string/action_take_photo"
+        android:icon="@android:drawable/ic_menu_camera"
+        android:orderInCategory="10"
+        android:showAsAction="ifRoom" />
 </menu>
