Added list view with custom list adapter with selfie and text

--- a/app/src/main/res/layout/activity_selfie_list.xml
+++ b/app/src/main/res/layout/activity_selfie_list.xml
@@ -5,8 +5,8 @@
     android:orientation="vertical"
     tools:context=".SelfieListActivity">
 
-    <ImageView
+    <ListView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/selfieView" />
+        android:id="@+id/selfieListView" />
 </LinearLayout>
