Fixes #9. Moved selfie list code to separate fragment

--- a/app/src/main/res/layout/activity_selfie_list.xml
+++ b/app/src/main/res/layout/activity_selfie_list.xml
@@ -5,8 +5,10 @@
     android:orientation="vertical"
     tools:context=".SelfieListActivity">
 
-    <ListView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/selfieListView" />
+    <fragment
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:name="com.example.vklyovan.dailyselfie.SelfieListFragment"
+        android:id="@+id/selfieListFragment"
+        android:layout_gravity="center_horizontal" />
 </LinearLayout>
