--- a/app/src/main/res/layout/selfie_view.xml
+++ b/app/src/main/res/layout/selfie_view.xml
@@ -1,17 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
     <ImageView
-        android:layout_width="100sp"
-        android:layout_height="100sp"
+        android:layout_width="@dimen/selfie_image_width"
+        android:layout_height="@dimen/selfie_image_height"
         android:id="@+id/selfieImageView" />
 
     <TextView
-        android:layout_width="wrap_content"
+        android:layout_width="@dimen/selfie_image_width"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="Large Text"
-        android:id="@+id/selfieTextView" />
+        android:text="Small Text"
+        android:id="@+id/selfieTextView"
+        android:maxLines="2" />
 </LinearLayout>
