--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,9 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
+
+    <!-- Selfie image size -->
+    <dimen name="selfie_image_width">100sp</dimen>
+    <dimen name="selfie_image_height">100sp</dimen>
+
 </resources>
