This fix #1, fix #3, fix #4, fix #5, fix #6, fix #7, fix #8.

--- a/app/src/main/res/layout/fragment_selfie_list.xml
+++ b/app/src/main/res/layout/fragment_selfie_list.xml
@@ -7,5 +7,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/selfieGridView"
-        android:numColumns="auto_fit" />
+        android:numColumns="@integer/selfie_grid_cells"
+        android:clickable="true"
+        android:descendantFocusability="beforeDescendants" />
 </LinearLayout>
