--- a/app/src/main/res/layout/activity_selfie_list.xml
+++ b/app/src/main/res/layout/activity_selfie_list.xml
@@ -1,14 +1,4 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    tools:context=".SelfieListActivity">
-
-    <fragment
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:name="com.example.vklyovan.dailyselfie.SelfieListFragment"
-        android:id="@+id/selfieListFragment"
-        android:layout_gravity="center_horizontal" />
-</LinearLayout>
+    android:id="@+id/fragment_container" />
