--- a/app/src/main/res/menu/menu_selfie_list.xml
+++ b/app/src/main/res/menu/menu_selfie_list.xml
@@ -2,9 +2,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context=".SelfieListActivity">
 
-    <item android:id="@+id/action_settings"
-        android:title="@string/action_settings"
+    <item android:id="@+id/action_select_all"
+        android:title="@string/action_select_all"
         android:orderInCategory="100"
+        android:showAsAction="never" />
+
+    <item android:id="@+id/action_remove_selected"
+        android:title="@string/action_remove_selected"
+        android:orderInCategory="110"
         android:showAsAction="never" />
 
     <item android:id="@+id/action_take_photo"
