--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,7 +4,12 @@
     <dimen name="activity_vertical_margin">16dp</dimen>
 
     <!-- Selfie image size -->
-    <dimen name="selfie_image_width">100sp</dimen>
-    <dimen name="selfie_image_height">100sp</dimen>
+    <dimen name="selfie_image_width">100dp</dimen>
+    <dimen name="selfie_image_height">100dp</dimen>
+
+    <!-- Selfie grid cells -->
+    <dimen name="selfie_grid_cell_width">120dp</dimen>
+    <dimen name="selfie_grid_cell_height">120dp</dimen>
+    <dimen name="selfie_grid_cell_padding">2dp</dimen>
 
 </resources>
